--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
         </activity>
 
        <activity android:name=".WelcomeActivity">
-
        </activity>
+        <activity android:name=".AboutActivity">
+        </activity>
     </application>
 
 </manifest>
