--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-       <activity android:name=".WelcomeActivity">
-       </activity>
-        <activity android:name=".AboutActivity">
-        </activity>
+        <activity android:name=".AboutActivity"></activity>
+        <activity
+            android:name=".NavigationActivity"></activity>
     </application>
 
 </manifest>
