--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.github.rey5137:material:1.2.1'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
 }
