--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     package="in.co.officevcan.stg1.ovkksapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
 
     <application
         android:allowBackup="true"
@@ -20,9 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".AboutActivity"></activity>
-        <activity android:name=".NavigationActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".NavigationActivity" />
+        <activity android:name=".HealthInformationActivity"></activity>
     </application>
 
 </manifest>
