--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +22,7 @@
         </activity>
         <activity android:name=".AboutActivity" />
         <activity android:name=".NavigationActivity" />
-        <activity android:name=".HealthInformationActivity"></activity>
+        <activity android:name="in.co.officev.HealthInformationActivity"></activity>
     </application>
 
 </manifest>
