--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
+
 }
