--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".AppController"
@@ -23,10 +23,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".AboutActivity" />
-        <activity android:name="in.co.officevcan.stg1.ovkksapp.NavigationActivity" />
-        <activity android:name="HealthInformationActivity"></activity>
-        <activity android:name=".CircularActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".NavigationActivity" />
+        <activity android:name=".HealthInformationActivity" />
+        <activity android:name=".CircularActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".UserDashboardActivity"></activity>
     </application>
 
 </manifest>
