--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".HealthInformationActivity" />
         <activity android:name=".CircularActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".UserDashboardActivity"></activity>
+        <activity android:name=".UserDashboardActivity" />
+        <activity android:name=".GravienceAndSuggestionActivity"></activity>
     </application>
 
 </manifest>
